src/test/ui/chalkify/type_wf.stderr
error[E0277]: the trait bound `{float}: Foo` is not satisfied
  --> $DIR/type_wf.rs:19:12
   |
LL |         x: 5.0,
   |            ^^^ the trait `Foo` is not implemented for `{float}`
   |
   = help: the trait `Foo` is implemented for `i32`
note: required by a bound in `S`
  --> $DIR/type_wf.rs:6:13
   |
LL | struct S<T: Foo> {
   |             ^^^ required by this bound in `S`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
